--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@
 in auxiliar_functions. Maybe write a structure to set all relevant information to the integrator. Maybe write a structure for the system, with system dimension, parameters and cycle period, for example, and use this structure inside the integrator structure
 - update all commentaries on header files
 - write functions for orbital motion using GSL's Newton method and test them separately
+- maybe write a run into makefile
