--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,14 @@
+- stabilish the right values for G and m
+- check if check_period is necessary according to the 
+    equations
+- verify if dfdt should be zero in the jacobian_rigid
 - autogenerate output folder (write a create dir function)
 - write a create file function
-- check where and how I am using auxiliar_functions_gsl and if they are useful, for example,
-in auxiliar_functions. Maybe write a structure to set all relevant information to the integrator. Maybe write a structure for the system, with system dimension, parameters and cycle period, for example, and use this structure inside the integrator structure
+- check where and how I am using auxiliar_functions_gsl 
+    and if they are useful, for example, in auxiliar_functions.
+     Maybe write a structure to set all relevant information to the integrator. Maybe write a structure for the system, with system dimension, parameters and cycle period, for example, and use this structure inside the integrator structure
 - update all commentaries on header files
 - review includes in header files
-- write functions for orbital motion using GSL's Newton method and test them separately
+- write functions for orbital motion using GSL's 
+    Newton method and test them separately
 - maybe write a run into makefile
