--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,14 @@
+- implement calculation of orbit through numerical integration
+instead of root finding
 - stabilish the right values for G and m
+- correct badckward integration on phase space function
 - check if check_period is necessary according to the 
     equations
 - verify if dfdt should be zero in the jacobian_rigid
 - autogenerate output folder (write a create dir function)
 - write a create file function
+- see what to do with system dimension and what variables transform
+into global or something like this
 - check where and how I am using auxiliar_functions_gsl 
     and if they are useful, for example, in auxiliar_functions.
      Maybe write a structure to set all relevant information to the integrator. Maybe write a structure for the system, with system dimension, parameters and cycle period, for example, and use this structure inside the integrator structure
