--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ instead of root finding
 - correct badckward integration on phase space function
 - check if check_period is necessary according to the 
     equations
+- define a structure called phase space and pass it to draw PS
 - verify if dfdt should be zero in the jacobian_rigid
 - autogenerate output folder (write a create dir function)
 - write a create file function
@@ -11,9 +12,15 @@ instead of root finding
 into global or something like this
 - check where and how I am using auxiliar_functions_gsl 
     and if they are useful, for example, in auxiliar_functions.
-     Maybe write a structure to set all relevant information to the integrator. Maybe write a structure for the system, with system dimension, parameters and cycle period, for example, and use this structure inside the integrator structure
+     Maybe write a structure to set all relevant information to 
+     the integrator. Maybe write a structure for the system, 
+     with system dimension, parameters and cycle period, 
+     for example, and use this structure inside the integrator 
+     structure
 - update all commentaries on header files
 - review includes in header files
 - write functions for orbital motion using GSL's 
     Newton method and test them separately
 - maybe write a run into makefile
+- think about using C++ and objects. In particular, put the evolve
+functions inside the classes.
