--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,16 @@
-- understand the differences between the spin-orbit trajectories
-using rigid and rigid_kepler as systems. The orbital part is
-almost identical. use theta = theta_dot = 0.1
-- stabilish the right values for G and m
+- understand how the specific values to the moon (or any other)
+satellite comes into play in the initial conditions. There are
+also the masses
+- stabilish the right values for G and m. Como adimensionalizar
+as massas, tendo em mente que existe a parte orbital e a parte
+do spin e um usa a soma das massas e o outro a massa do primario
 - pass I as a parameter in the void param (Olhar no dir temp)
+- melhorar flexibilidade da função phase space
 - correct badckward integration on phase space function
 - check if check_period is necessary according to the 
     equations
+- adicionar alguma verificação de erro. Pode ser a parte orbital,
+mas seria melhor se envolvesse a parte rotacional também
 - define a structure called phase space and pass it to draw PS
 - verify if dfdt should be zero in the jacobian_rigid
 - autogenerate output folder (write a create dir function)
