--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
-- Verify the rotation matrix for grid_min < 0.0. Do I have to add 1 to all values?
+- maybe use a different software than gnuplot to fit histogram
+
+- Fix rotation matrix
+
+- Make an init for the paramerters of Hyperion and so on
 
 - Use terminal eps in scripts and pipes (or both versions on pipe and script)
 
