added an id to trace_orbit_map and created scripts/plot_time_series.sh

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
-- maybe use a different software than gnuplot to fit histogram
+- maybe use a different software than gnuplot to fit histogram and fit cuvers
+ perhaps matlab or python. No caso de python, criar um projeto
+ aqui dentro chamado python_tools
 
 - Fix rotation matrix
 
