created more functions to deal with time series

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,12 @@ a member of periodic orbit structure. Also do this to evolve_basin
 - move resonance calculation from trace 
 orbit to future periodic orbit function
 
+- I have to put initial condition info on orbit!!
+ then change the draw orbit on phase space stuff
+
+- move time series to tests. Or rather, transform time series
+to a drawing of orbits only
+
 - maybe use a different software than gnuplot to fit histogram and fit cuvers
  perhaps matlab or python. No caso de python, criar um projeto
  aqui dentro chamado python_tools
