solved bugs and tested periodic orbit calculation. It works for the cases tested so far, which is limited to stable orbits in the rigid case

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 - improve resonance calculation for periodic orbits
 
+- when the resonance is being calculated for p.o.same
+use it as a reference to identify data file names. along with
+stability more along the way
+
 - maybe change argument of basin of attraction function to
 a member of periodic orbit structure. Also do this to evolve_basin
 
